# hg2jj

./: Cargo.toml  Dockerfile  README.md  mkdocks.yml  mkdocs.yml
.github/workflows/: build.yml  main.yml  pr.yml  release.yml
assets/dict/: rgjj.txt
assets/icons/: convert.sh  load_texture_id.sh
docs/: index.md
scripts/: run-docker.sh  run-in-docker.sh  run-mpv-in-docker.sh
scripts/aux/: absolutize-md.sh  absolutize-org.sh  create-readme-org.sh  create-readme.sh  create-thumbnail.sh  index-to-m3u.sh  logseq-import.sh  scale-to-720p.sh
src/: app.rs  fanatics.rs  lib.rs  main.rs  mpvstate.rs
