[package]
name = "hg2jj"
version = "0.1.0"
authors = ["Ioannis Canellos <iocanel@gmail.com>"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.16.0" # Gives us egui, epi and web+native backends
rfd = "0.6.3"
itertools = "0.10.3"
image = "0.20.0"
ffprobe = "0.3.0"
ffmpeg = "0.3.0"
ffmpeg-sys = { version = "4", features = ["build"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.61"
regex = "1"

# Scrapper
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
scraper = "0.12.0"

# OCR
opencv = {version = "0.62.0", features = ["clang-runtime"] }
spellcheck = "0.1.2"
tesseract = "0.10.1"

# Settings and Cache dirs
platform-dirs = "0.3.0"

# Asset management
assets_manager = "0.7.2"

[features]
default = []
persistence = ["eframe/persistence" ] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
